# sheaf-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/sheaf-core/: Cargo.toml  README.md
crates/sheaf-core/src/: admm.rs  graph.rs  lib.rs  par.rs  tensor.rs
crates/sheaf-core/src/geometry/: fixed.rs  lora.rs  mod.rs
crates/sheaf-core/src/solvers/: mod.rs  x_diag_prox.rs  x_simple.rs  z_cg.rs
crates/sheaf-core/tests/: admm_tests.rs  cg_tests.rs  geometry_tests.rs  golden_parity.rs  graph_tests.rs  lora_tests.rs  x_solver_tests.rs
crates/sheaf-core/tests/common/: mod.rs
crates/sheaf-demo/: Cargo.toml
crates/sheaf-demo/tests/: e2e_smoke.rs
crates/sheaf-io/: Cargo.toml  README.md
crates/sheaf-io/src/: lib.rs  mazegen.rs  npz.rs  views.rs  weights.rs
crates/sheaf-io/tests/: goldens.rs  mnist_golden.rs  sudoku_golden.rs
crates/sheaf-nn/: Cargo.toml  README.md
crates/sheaf-nn/src/: config.rs  decoder.rs  encoder.rs  layers.rs  lib.rs  model.rs  restriction_maps.rs
crates/sheaf-web/: .gitignore  Cargo.toml
crates/sheaf-web/assets/: weights_ema_f16.safetensors
crates/sheaf-web/src/: lib.rs  session.rs
docs/: PLAN.md  ROADMAP.md  demo_output.txt
goldens/: CONTRACT.md
goldens/maze/: NOTES.md  batch.npz  checkpoint.pkl  config.json  eval_seed42.json  history.json  manifest.json  trace.npz  weights.safetensors
tools/: convert_f16.py  dump_goldens.py  eval_checkpoint.py  export_weights.py
web/: app.js  index.html  style.css
web/mock/: sheaf_web.js
web/test/: ui_smoke.mjs
