[package]
name = "sheaf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Sheaf-ADMM coordination core: graph, geometry, solvers, unrolled ADMM (ndarray only)"

[dependencies]
ndarray = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
