[package]
name = "sheaf-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native demo + CI-facing golden replay binaries"
# Not published: the binaries load weights/fixtures from the repo's goldens/
# directory, which a `cargo install`ed copy would not have.
publish = false

[dependencies]
ndarray = { workspace = true }
anyhow = { workspace = true }
sheaf-core = { workspace = true }
sheaf-io = { workspace = true }
sheaf-nn = { workspace = true }
# viz_export: joint-PCA SVD (PLAN.md §1 viz note pins faer 0.22).
faer = "0.22.6"
# maze_demo --gif: animated GIF encoding (`image` wraps the `gif` crate).
image = { version = "0.25.6", default-features = false, features = ["gif"] }

[[bin]]
name = "parity_check"
path = "src/bin/parity_check.rs"

[[bin]]
name = "maze_demo"
path = "src/bin/maze_demo.rs"

[[bin]]
name = "viz_export"
path = "src/bin/viz_export.rs"
